syntax = "proto3";

package vn.techres.microservice.grpc.nodejs_food_channel_processor.channel_order;

service ChannelOrderService {
    rpc getOrderDetail (OrderDetailRequest) returns (OrderBaseResponse);
    rpc getOrderDetailV2 (OrderDetailRequest) returns (OrderBaseResponse);
    rpc getOrders (OrderRequest) returns (ResultBaseResponse);
    rpc getOrdersV2 (OrderRequest) returns (ResultBaseResponse);
    rpc getOrdersV3 (OrderRequest) returns (ResultV3BaseResponse);
    rpc getOrdersV4 (OrderRequest) returns (ResultV3BaseResponse);
    rpc syncOrders (SyncOrderRequest) returns (BaseEmptyResponse);
    rpc syncChannelOrderHistory (SyncChannelOrderHistoryRequest) returns (BaseEmptyResponse);
    rpc resetChannelOrder (ResetChannelOrderRequest) returns (BaseEmptyResponse);
    rpc handleCompleteChannelOrder (HandleCompleteChannelOrderRequest) returns (BaseEmptyResponse);
    rpc handleCancelChannelOrder (HandleCancelChannelOrderRequest) returns (BaseEmptyResponse);
    rpc syncOrdersMongo (SyncOrderMongoRequest) returns (BaseEmptyResponse);
    rpc batchConfirmChannelOrder(BatchConfirmChannelOrderRequest) returns (BatchConfirmChannelOrderResponseResultResponse);
    rpc updateCancelPrintOrders(UpdateCancelPrintOrdersRequest) returns (BaseEmptyResponse);
    rpc getOrderDetailToPrint (OrderDetailToPrintRequest) returns (OrderBaseResponse);
    rpc handleCompleteChannelOrderV2 (HandleCompleteChannelOrderV2Request) returns (BaseEmptyResponse);
    rpc handleCancelChannelOrderV2 (HandleCancelChannelOrderV2Request) returns (BaseEmptyResponse);
    rpc batchConfirmChannelOrderV2(BatchConfirmChannelOrderRequest) returns (BatchConfirmChannelOrderResponseResultResponse);
    rpc updateCancelPrintOrdersV2(UpdateCancelPrintOrdersRequest) returns (BaseEmptyResponse);
    rpc getOrderDetailToPrintV2 (OrderDetailToPrintRequest) returns (OrderBaseResponse);
    rpc batchConfirmChannelOrderV3(BatchConfirmChannelOrderRequest) returns (BaseEmptyResponse);
    rpc handleCancelChannelOrderV3 (HandleCancelChannelOrderV2Request) returns (BaseEmptyResponse);
    rpc handleCompleteChannelOrderV3 (HandleCompleteChannelOrderV2Request) returns (BaseEmptyResponse);

}

message Empty {
}

message BaseEmptyResponse {
  int32 status = 1;
  string message = 2;
  Empty data = 3;
}

// ---------- getOrderDetail ---------------

message OrderDetailRequest {
    int32 id = 1;
    int32 is_app_food = 2;
    int32 restaurant_id = 3;
}

message OrderDetail {
    int32 id = 1;
    int32 customer_order_id = 2;
    string food_id = 3;
    string food_name = 4;
    int32 order_detail_parent_id = 5;
    int32 order_detail_combo_parent_id = 6;
    string customer_order_detail_addition_ids = 7;
    string customer_order_detail_combo_ids = 8;
    string customer_order_detail_combo = 9;
    string customer_order_detail_addition = 10;
    int32 quantity = 11;
    double price = 12;
    double total_price = 13;
    int32 is_addition = 14;
    int32 is_combo = 15;
    string note = 16;
    double total_price_addition = 17;
    string created_at = 18;
    string updated_at = 19;
    string food_options = 20;
    int32 is_allow_print_stamp = 21;
    int32 restaurant_kitchen_place_id=22;
}

message Order {
    int32 id = 1;
    string channel_order_id = 2;
    int32 channel_order_food_id = 3;
    string channel_branch_id = 4;
    double total_amount = 5;
    string driver_name = 6;
    string driver_avatar = 7;
    string channel_order_food_name = 8;
    string channel_order_food_code = 9;
    int32 restaurant_id = 10;
    int32 restaurant_brand_id = 11;
    int32 branch_id = 12;
    int32 order_id = 13;
    int32 customer_id = 14;
    int32 table_id = 15;
    int32 area_id = 16;
    string table_name = 17;
    string customer_name = 18;
    string phone = 19;
    string address = 20;
    string note = 21;
    int32 payment_method = 22;
    int32 payment_status = 23;
    int32 customer_order_status = 24;
    int32 customer_order_type = 25;
    string created_at = 26;
    string updated_at = 27;
    double shipping_fee = 28;
    string tracking_url = 29;
    string shippe_name = 30;
    string shipper_phone = 31;
    int32 order_time = 32;
    string cancel_comment = 33;
    int32 restaurant_third_party_delivery_id = 34;
    string shipping_lat = 35;
    string shipping_lng = 36;
    string third_party_delivery_order_id = 37;
    string third_party_delivery_name = 38;
    int32 is_app_food = 39;
    string display_id = 40;
    double order_amount = 41;
    double discount_amount = 42;
    double customer_order_amount = 43;
    double customer_discount_amount = 44;
    repeated OrderDetail details = 45;
    string channel_order_code = 46;
    string driver_phone = 47;
    string channel_branch_name = 48;
    string channel_branch_address = 49;
    string channel_branch_phone = 50;
    double item_discount_amount = 51;
    string deliver_time = 52;
    int32 is_scheduled_order = 53;
    int32 is_printed = 54;
    int32 is_cancel_printed = 55;
    int32 is_cancel_order = 56;
}

message OrderBaseResponse {
  int32 status = 1;
  string message = 2;
  Order data = 3;
}

message ListOrderBaseResponse {
  int32 status = 1;
  string message = 2;
  repeated Order data = 3;
}


// ---------- getOrders ---------------

message OrderRequest {
    int32 restaurant_id = 1;
    int32 restaurant_brand_id = 2;
    int32 branch_id = 3;
    int32 channel_order_food_id = 4;
    string customer_order_status = 5;
    int32 is_have_restaurant_order = 6;
    int32 is_app_food = 7;
    int32 is_active = 8;
    string tokens = 9;
    int32 is_use_kafka = 10;
}

message ResultBaseResponse {
  int32 status = 1;
  string message = 2;
  ResultResponse data = 3;
}

message ErrorResponse {
  string code= 1;
  string message= 2;
  string token_name= 3;
  string token_username= 4;
}

message ResultResponse {
  repeated ErrorResponse errors = 1;
  repeated Order list = 2;
}

message ResultV3BaseResponse {
  int32 status = 1;
  string message = 2;
  ResultV3Response data = 3;
}

message ResultV3Response {
  repeated ErrorResponse errors = 1;
  repeated Order list = 2;
  int32 is_new_order_app_food = 3;
  int32 is_new_order_online = 4;
}

// ---------- syncOrders ---------------


message SyncOrderRequest {
    int32 restaurant_id = 1;
    int32 restaurant_brand_id = 2;
    int32 branch_id = 3;
    string access_tokens = 4;
    string new_orders_SHF = 5;
    string new_orders_GRF = 6;
    string new_orders_BEF = 7;
    string history_orders_SHF = 8;
    string history_orders_GRF = 9;
    string history_orders_BEF = 10;
    string customers = 11;
}


// ---------- syncChannelOrderHistory ---------------

message SyncChannelOrderHistoryRequest {
    int32 restaurant_id = 1;
    int32 restaurant_brand_id = 2;
    int32 branch_id = 3;
    string tokens = 4;
}

// ---------- resetChannelOrder ---------------
message ResetChannelOrderRequest {
    int32 restaurant_id = 1;
    int32 restaurant_brand_id = 2;
    int32 branch_id = 3;
    int32 channel_order_food_id = 4;
}

// ---------- syncOrdersMongo ---------------

message SyncOrderMongoRequest {
    int32 restaurant_id = 1;
    int32 restaurant_brand_id = 2;
    int32 branch_id = 3;
    int32 channel_order_food_id = 4;
    string access_tokens = 5;
}

// ---------- handleCompleteChannelOrder ---------------
message HandleCompleteChannelOrderRequest {
  int32 restaurant_id = 1;
  int32 id = 2;
}

// ---------- handleCancelChannelOrder ---------------
message HandleCancelChannelOrderRequest {
  int32 restaurant_id = 1;
  int32 id = 2;
}

// ---------- batchConfirmChannelOrder ---------------
message BatchConfirmChannelOrderRequest {
  int32 restaurant_id = 1;
  int32 branch_id = 2;
  string ids = 3;
}

message BatchConfirmChannelOrderResponseResultResponse {
  int32 status = 1;
  string message = 2;
  string data = 3;
}

// ---------- updateCancelPrintOrders ---------------
message UpdateCancelPrintOrdersRequest {
  int32 restaurant_id = 1;
  int32 branch_id = 2;
  string ids = 3;
}

// ---------- getOrderDetailToPrint ---------------

message OrderDetailToPrintRequest {
    int32 id = 1;
    int32 restaurant_id = 3;
}

// ---------- handleCompleteChannelOrderV2 ---------------
message HandleCompleteChannelOrderV2Request {
  int32 restaurant_id = 1;
  int32 id = 2;
  int32 restaurant_order_id= 3;
}

// ---------- handleCancelChannelOrderv2 ---------------
message HandleCancelChannelOrderV2Request {
  int32 restaurant_id = 1;
  int32 id = 2;
  int32 restaurant_order_id= 3;
}
