syntax = "proto3";

option java_multiple_files = true;
package vn.techres.microservice.grpc.java.customer_order_online.customer_order_for_channel_food;

service CustomerOrderForChannelFoodService {
  rpc getList(CustomerOrderRequest) returns (BaseListResponse) {};
  rpc getDetail(CustomerOrderDetailRequest) returns (BaseDetailResponse) {};

}


message CustomerOrderRequest {
  int32 branch_id = 1;
  int32 customer_order_type = 2;
  string customer_order_status = 3;
}


message CustomerOrderDetailRequest {
  int32 id = 1;
}

message BaseListResponse {
  int32 status = 1;
  string message = 2;
  repeated CustomerOrderOnlineResponse data = 3;
  int32 is_have_new_order = 4;
}

message BaseDetailResponse {
  int32 status = 1;
  string message = 2;
  CustomerOrderOnlineResponse data = 3;
}

message CustomerOrderOnlineResponse {
  int32 id = 1;
  int32 restaurant_id = 2;
  int32 restaurant_brand_id = 3;
  int32 branch_id = 4;
  int32 order_id = 5;
  int32 customer_id = 6;
  int32 area_id = 7;
  int32 table_id = 8;
  string table_name = 9;
  string customer_name = 10;
  string phone = 11;
  string address = 12;
  string total_amount = 13;
  int32 payment_status = 14;
  int32 payment_method = 15;
  string note = 16;
  int32 customer_order_status = 17;
  int32 customer_order_type = 18;
  repeated CustomerOrderOnlineDetailResponse customer_order_details = 19; 
  string created_at = 20;
  string updated_at = 21;
  string shipping_fee = 22;
  int32 restaurant_third_party_delivery_id = 23;
  string shipping_lat = 24;
  string shipping_lng = 25;
  string third_party_delivery_order_id = 26;
  string tracking_url = 27;
  string shipper_name = 28;
  string shipper_phone = 29;
  int32 order_time = 30;
  string cancel_comment = 31;
  string third_party_delivery_name = 32;
  int32 is_pre_order = 33;
  string pre_order_time = 34;
}

message FoodInComboResponse {
  int32 id = 1;
  string name = 2;
  string price = 3;
  string quantity = 4;
}

message FoodInAdditionResponse {
  int32 id = 1;
  string name = 2;
  string price_with_temporary = 3;
  string quantity = 4;
}


message CustomerOrderOnlineDetailResponse {
  int64  id = 1;
  int32  customer_order_id = 2;
  int32  food_id = 3;
  string food_name = 4;
  int32  order_detail_parent_id = 5;
  int32  order_detail_combo_parent_id = 6;
  string customer_order_detail_addition_ids = 7;
  string customer_order_detail_combo_ids = 8;
  string quantity = 9;
  string price = 10;
  string total_price = 11;
  int32  is_addition = 12;
  int32  is_combo = 13;
  string note = 14;
  repeated FoodInComboResponse customer_order_detail_combo = 15;
  repeated FoodInAdditionResponse customer_order_detail_addition = 16;
  string total_price_addition = 17;
  string created_at = 18;
  string updated_at = 19;
  
}
